maintainIT2/src/objects/Work_Order_Install_Para__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Work Order Install Parameters</description>
    <fields>
        <fullName>AutoID_Standard_Tasks__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check = Yes, Automatically Assign the Standard Task Number as the Standard Task ID</description>
        <inlineHelpText>Check = Yes, Automatically Assign the Standard Task Number as the Standard Task ID</inlineHelpText>
        <label>AutoID Standard Tasks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Est_Hrs__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>This custom setting will override the Initial Est Hrs that is Defaulted on a Work Order</description>
        <inlineHelpText>This custom setting will override the Initial Est Hrs that is Defaulted on a Work Order</inlineHelpText>
        <label>Initial Est Hrs</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WO_Task_Default_Rate__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Work Order Task default labor used to calculate Planned Work Order Task Labor Amount when a Craft is NOT specified</description>
        <inlineHelpText>Work Order Task default labor used to calculate Planned Work Order Task Labor Amount when a Craft is NOT specified</inlineHelpText>
        <label>WO Task Default Rate</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Work Order Install Parameters</label>
</CustomObject>